# Queen-Solver

./: .gitignore  README.md  main.py  objects.py  pyproject.toml  requirements.txt  tableau.py  tests.ipynb
